gcc/testsuite/g++.dg/pr71184.C
operator new[ // { dg-error "expected type-specifier before 'new'" }
